--- a/views/modals/pause.html
+++ b/views/modals/pause.html
@@ -5,20 +5,20 @@
     <div ng-hide="confirmQuit">
         <div class="form-group">
             <label for="music" class="control-label">Music</label>
-            <button id="music" type="button" class="btn btn-primary btn-block btn-lg" ng-change="musicChange()" ng-model="music" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+            <button id="music" type="button" class="btn btn-primary btn-block btn-lg" ng-change="musicChange()" ng-model="music" uib-btn-checkbox uib-btn-checkbox-true="true" uib-btn-checkbox-false="false">
                 <i class="fa fa-volume-{{music ? 'up' : 'off'}}"></i> Music is {{music ? 'Enabled' : 'Disabled'}}
             </button>
         </div>
         <div class="form-group">
             <label class="control-label">Cards</label>
             <div class="btn-group btn-group-lg">
-                <label class="btn btn-primary" ng-repeat="design in cardDesigns" ng-model="$parent.cardDesign" btn-radio="design">{{design.name}}</label>
+                <label class="btn btn-primary" ng-repeat="design in cardDesigns" ng-model="$parent.cardDesign" uib-btn-radio="design">{{design.name}}</label>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label">Background</label>
             <div class="btn-group btn-group-lg">
-                <label class="btn btn-primary" ng-repeat="design in backgroundDesigns" ng-model="$parent.backgroundDesign" btn-radio="design">{{design.name}}</label>
+                <label class="btn btn-primary" ng-repeat="design in backgroundDesigns" ng-model="$parent.backgroundDesign" uib-btn-radio="design">{{design.name}}</label>
             </div>
         </div>
 
