--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -43,7 +43,7 @@
                             <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()"><span class="visible-xs-inline" ng-bind-html="translateCard(card).mini"></span><span class="hidden-xs" ng-bind-html="translateCard(card).full"></span></button>
                         </div>
                         <div ng-if="card.values.length !== 1">
-                            <button type="button" popover-append-to-body="true" popover-template="'multipleCards.html'" popover-trigger="focus" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlayAny(card) || getHumanPlayer() != game.getCurrentPlayer()"><span class="visible-xs-inline" ng-bind-html="translateCard(card).mini"></span><span class="hidden-xs" ng-bind-html="translateCard(card).full"></span></button>
+                            <button type="button" uib-popover-append-to-body="true" uib-popover-template="'multipleCards.html'" uib-popover-trigger="focus" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlayAny(card) || getHumanPlayer() != game.getCurrentPlayer()"><span class="visible-xs-inline" ng-bind-html="translateCard(card).mini"></span><span class="hidden-xs" ng-bind-html="translateCard(card).full"></span></button>
                         </div>
                     </div>
 
