--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+html {
+    min-height: 100%;
+}
+
 body {
     height: 100%;
     min-height: 100%;
@@ -7,7 +11,6 @@ body {
     padding-top: 70px;
 }
 
-html,
 .container {
     height: 100%;
 }
