--- a/views/modals/pause.html
+++ b/views/modals/pause.html
@@ -1,34 +1,26 @@
-﻿<div class="modal-header">
-    <h3 class="modal-title">Game Paused</h3>
+<div class="modal-header">
+    <h3 class="modal-title">
+        <span ng-show="!displaySettings && !confirmQuit"><i class="fa fa-pause" ></i> Game Paused</span>
+        <span ng-show="displaySettings"><i class="fa fa-cog"></i> Settings</span>
+        <span ng-show="confirmQuit"><i class="fa fa-exclamation-triangle"></i> Really Quit?</span>
+    </h3>
 </div>
 <div class="modal-body">
     <div ng-hide="confirmQuit">
-        <div class="form-group">
-            <label for="music" class="control-label">Music</label>
-            <button id="music" type="button" class="btn btn-primary btn-block btn-lg" ng-change="musicChange()" ng-model="music" uib-btn-checkbox uib-btn-checkbox-true="true" uib-btn-checkbox-false="false">
-                <i class="fa fa-volume-{{music ? 'up' : 'off'}}"></i> Music is {{music ? 'Enabled' : 'Disabled'}}
+        <div ng-hide="displaySettings">
+            <button type="button" class="btn btn-primary btn-block btn-lg" ng-click="displaySettings = true">
+                <i class="fa fa-cog"></i> Settings
+            </button>
+            <button type="button" class="btn btn-danger btn-block btn-lg" ng-click="confirmQuit = true">
+                <i class="fa fa-sign-out"></i> Quit to Main Menu
+            </button>
+            <button type="button" class="btn btn-success btn-block btn-lg" ng-click="close()">
+                <i class="fa fa-play"></i> Continue
             </button>
         </div>
-        <div class="form-group">
-            <label class="control-label">Cards</label>
-            <div class="btn-group btn-group-lg">
-                <label class="btn btn-primary" ng-repeat="design in cardDesigns" ng-model="$parent.cardDesign" uib-btn-radio="design">{{design.name}}</label>
-            </div>
+        <div ng-show="displaySettings">
+            <settings-editor apply-background="true" sample-card="true" />
         </div>
-        <div class="form-group">
-            <label class="control-label">Background</label>
-            <div class="btn-group btn-group-lg">
-                <label class="btn btn-primary" ng-repeat="design in backgroundDesigns" ng-model="$parent.backgroundDesign" uib-btn-radio="design">{{design.name}}</label>
-            </div>
-        </div>
-
-        <h4>Options</h4>
-        <button type="button" class="btn btn-danger btn-block btn-lg" ng-click="confirmQuit = true">
-            <i class="fa fa-sign-out"></i> Quit to Main Menu
-        </button>
-        <button type="button" class="btn btn-success btn-block btn-lg" ng-click="close()">
-            <i class="fa fa-play"></i> Continue
-        </button>
     </div>
     <div ng-show="confirmQuit">
         <p class="lead">Do you really want to quit this game and return to the main menu?</p>
@@ -37,4 +29,5 @@
     </div>
 </div>
 <div class="modal-footer">
+    <button ng-show="displaySettings" type="button" class="btn btn-primary btn-block btn-lg" ng-click="displaySettings = false">OK</button>
 </div>
