Fixed player out highlighting

--- a/styles/main.css
+++ b/styles/main.css
@@ -106,7 +106,7 @@ body {
 }
 
 .player-eliminated {
-    background-color: #444444;
+    background-color: #444444!important;
     color: #7c7c7c;
 }
 
