Added credits screen

--- a/views/screens/main.html
+++ b/views/screens/main.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8 col-xs-12">
-        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewInstructions()">Instructions</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewStats()">Stats and Unlockables</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="settings()">Settings</button>
+        <a class="btn btn-primary btn-lg btn-block" ui-sref="newgame">New Game</a>
+        <a class="btn btn-primary btn-lg btn-block" ui-sref="instructions">Instructions</a>
+        <a class="btn btn-primary btn-lg btn-block" ui-sref="stats">Stats and Unlockables</a>
+        <a class="btn btn-primary btn-lg btn-block" ui-sref="settings">Settings</a>
+        <a class="btn btn-primary btn-lg btn-block" ui-sref="credits">Credits</a>
     </div>
 </div>
