--- a/views/directives/navBarDirective.html
+++ b/views/directives/navBarDirective.html
@@ -6,7 +6,7 @@
             </button>
             <span class="navbar-brand" ng-class="{'pointer': backButtonFunc() != null}" ng-click="backButtonFunc()()">
                 <span class="pointer" ng-show="backButtonFunc() != null"><i class="fa fa-chevron-left"></i> </span>
-                &#127183; {{title()}}
+                <span><img alt="Ninety-Nine" src="images/icon.png" class="brand-icon"> {{title()}}</span>
             </span>
         </div>
 
