Added link on homepage to website, themes for all menu screens

--- a/views/screens/credits.html
+++ b/views/screens/credits.html
@@ -12,7 +12,6 @@
     <div class="page-header">
         <h3>Music</h3>
     </div>
-    <h5><a href="http://cmamusic.bandcamp.com/">CMA</a><br />
-    <small>"Without You", "You're Not Alone", "Caught In Our Thoughts", "Ku'uipo", "Moving Forward" used under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported</a> license. Music was transcoded to another format. No other changes were made.</small>
-    </h5>
+    <h5><a href="http://cmamusic.bandcamp.com/">CMA</a><br /></h5>
+    <h6>"Without You", "You're Not Alone", "Caught In Our Thoughts", "Ku'uipo", "Moving Forward" used under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported</a> license. Music was transcoded to another format. No other changes were made.</h6>
 </div>
