--- a/views/screens/main.html
+++ b/views/screens/main.html
@@ -7,3 +7,22 @@
         <a class="btn btn-primary btn-lg btn-block" ui-sref="credits">Credits</a>
     </div>
 </div>
+<br />
+<br />
+<br />
+<div class="row">
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8 col-xs-12">
+        <div class="list-group">
+            <a href="http://www.keithott.com/" class="list-group-item list-group-item-info" target="_blank">
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <i class="fa fa-gift fa-4x"></i>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">Want More?</h4> Tap here to visit KeithOtt.com for more free apps, utilities, videos, and more!
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
