--- a/styles/main.css
+++ b/styles/main.css
@@ -46,8 +46,26 @@ body {
 
 /* Background Themes */
 .background-menu {
-    background: royalblue;
+    background: #565E60;
 	background-image: linear-gradient(to bottom, #565E60 0%, #565E60 75%, #BCBCBC 100%);
+}
+
+.background-credits {
+    background: #B8CFB5;
+	background-image: linear-gradient(to bottom, #B8CFB5 0%, #B8CFB5 75%, #454871 100%);
+}
+
+.background-instructions {
+    background: #C5CED2;
+}
+
+.background-stats {
+    background: #F0F2EB;
+}
+
+.background-newgame {
+    background: #C5CED2;
+	background-image: linear-gradient(to bottom, #C5CED2 0%, #C5CED2 75%, #759AA8 100%);
 }
 
 .background-blue {
