Added new card and background designs

--- a/views/screens/credits.html
+++ b/views/screens/credits.html
@@ -10,6 +10,11 @@
     <h5>Becky S.</h5>
 
     <div class="page-header">
+        <h3>Card Designs and Backgrouns</h3>
+    </div>
+    <h5><a href="http://lea.verou.me/css3patterns/">CSS3 Patterns Gallery</a></h5>
+
+    <div class="page-header">
         <h3>Music</h3>
     </div>
     <h5><a href="http://cmamusic.bandcamp.com/">CMA</a><br /></h5>
