Clarified instructions, typo on Credits

--- a/views/screens/instructions.html
+++ b/views/screens/instructions.html
@@ -1,6 +1,6 @@
 <h3>Overview</h3>
 <p>Ninety-Nine is played with two to five players and a standard 52 card deck.  (In this version of Ninety-Nine, only the values and effects each card has are displayed in order to simplify the game.)  Each player is randomly dealt three cards.  Players alternate playing cards, adding or subtracting from the Count.</p>
-<p>At no point can the Count exceed 99 nor can it fall below 0.  Players who cannot play a card that would not result in the Count exceeding 99 are eliminated.  The last player remaining is the winner.</p>
+<p>At no point can the Count exceed 99 nor can it fall below 0.  Players who cannot play a card that will keep the Count below or equal to 99 are eliminated.  The last player remaining is the winner.</p>
 <h3>Playing the Game</h3>
 <p>At the bottom of the screen are your three cards.  If the card can be played, it will be bright blue.  If it cannot be played, it will be a light blue.  Tap on the card you wish to play.  It will be placed on the game board, its value will be added to the count, and its effect will be applied.  A new card is automatically drawn for you, and play continues clockwise to the next player (unless the order has been reversed).</p>
 <p>If a card can be played in one of many ways, a pop-up will appear near the card.  Tap the way you wish to play.  Tapping anywhere else on the screen will dismiss the pop-up, allowing you to select a different card.</p>
@@ -32,4 +32,4 @@
     <dd>When played, the count is set to 99, even if it is already 99.  Play continues with the next player.</dd>
 </dl>
 <h3>Winning the Game</h3>
-<p>If a player cannot play a card that will not result in the count going above 99, he or she is eliminated from the game.  The final player remaining is the winner of the game.</p>
+<p>If a player cannot play a card that will keep the Count below or equal to 99, he or she is eliminated from the game.  The final player remaining is the winner of the game.</p>
