--- a/views/screens/credits.html
+++ b/views/screens/credits.html
@@ -10,7 +10,7 @@
     <h5>Becky S.</h5>
 
     <div class="page-header">
-        <h3>Card Designs and Backgrouns</h3>
+        <h3>Card Designs and Backgrounds</h3>
     </div>
     <h5><a href="http://lea.verou.me/css3patterns/">CSS3 Patterns Gallery</a></h5>
 
